2009-09-03  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/Makefile (svm$(SHREXT)): no need to add -I$(INCLUDES)
	* modules/postgresql/Makefile.in (postgresql.fas): remove an extra rule
	* modules/clx/new-clx/Makefile.in (clisp-module-distrib): fix a typo;
	use "mkdir -p"

2009-09-03  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/Makefile.in, modules/clx/new-clx/clx.lisp:
	* modules/dbus/Makefile.in, modules/dirkey/Makefile.in:
	* modules/fastcgi/Makefile.in, modules/gdbm/Makefile.in:
	* modules/gtk2/Makefile.in, modules/i18n/Makefile.in:
	* modules/oracle/Makefile.in, modules/pari/Makefile.in:
	* modules/pcre/Makefile.in, modules/postgresql/Makefile.in:
	* modules/rawsock/Makefile.in, modules/readline/Makefile.in:
	* modules/regexp/Makefile.in, modules/syscalls/Makefile.in:
	* modules/wildcard/Makefile.in, modules/zlib/Makefile.in:
	* modules/clx/new-clx/Makefile.in (CLISP): init to @CLISP@ -norc -q
	(CLISP_LINKKIT): init to @CLISP_LINKKIT@ and use instead of INCLUDES
	* m4/clisp.m4 (CL_CLISP): define CLISP_LINKKIT instead of CLISP_INCLUDE

2009-09-02  Sam Steingold  <sds@gnu.org>

	modules should be buildable using pre-installed clisp
	* makemake.in (build-aux): add link_dep target
	(modular): depend on it
	(BUILD_AUX): compute the files which module configures need
	(anymodule): pass --with-clisp to module configures
	(distrib, install, install-bin): install BUILD_AUX in libdir/build-aux
	* m4/clisp.m4 (CL_CLISP): major rewrite for better caching
	(CL_CLISP_NEED_FFI): add
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): require CL_CLISP,
	pass cl_cv_clisp_libdir/build-aux to AC_CONFIG_AUX_DIR
	* modules/berkeley-db/configure.in, modules/clx/new-clx/configure.in:
	* modules/dirkey/configure.in, modules/gdbm/configure.in:
	* modules/i18n/configure.in, modules/pcre/configure.in:
	* modules/rawsock/configure.in, modules/regexp/configure.in:
	* modules/syscalls/configure.in: call CL_MODULE_COMMON_CHECKS
	without arguments